samples/_failures_safe/1761665299_fd9231_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e9e89f2.c: In function ‘main’:
./samples/SAFE/__tmp_8e9e89f2.c:176:5: error: expected ‘,’ or ‘;’ at end of input
  176 |     int column = 1
      |     ^~~
./samples/SAFE/__tmp_8e9e89f2.c:176:5: error: expected declaration or statement at end of input
